# advancedcpp_lab1

./: .clang-format  .gitignore  CMakeLists.txt  Card.h  DeckManager.cpp  DeckManager.h
data/: results.csv
src/: Card.cpp  Card.h  DeckManager.cpp  DeckManager.h  main.cpp  safeInputs.cpp  safeInputs.h  statistics.cpp  statistics.h
tests/: hello_test.cpp
